[gd_scene load_steps=12 format=2]

[ext_resource path="res://import/RedBlack copy/Panel3RedBlack.png" type="Texture" id=1]
[ext_resource path="res://import/RedBlack copy/BqAvataExampleRedBlack.png" type="Texture" id=2]
[ext_resource path="res://import/RedBlack copy/Panel4 (2)RedBlack.png" type="Texture" id=3]
[ext_resource path="res://import/RedBlack copy/MiniPanel 2RedBlack.png" type="Texture" id=4]
[ext_resource path="res://import/RedBlack copy/03_IconClose (2)RedBlack.png" type="Texture" id=5]
[ext_resource path="res://import/monterey/MontereyFLF-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://script/characterPanel.gd" type="Script" id=7]
[ext_resource path="res://import/monterey/MontereyFLF-BoldItalic.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 6 )

[node name="characterDetail" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.352941, 0.352941, 0.352941, 0 )
script = ExtResource( 7 )

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_left = 0.742
anchor_top = 0.332
anchor_right = 0.788
anchor_bottom = 0.735
margin_left = 63.192
margin_top = -0.200012
margin_right = 258.088
margin_bottom = -179.0
rect_rotation = 90.0
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="TextureRect2"]
margin_right = 240.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "character"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true

[node name="TextureRect3" type="TextureRect" parent="."]
anchor_left = 0.226
anchor_top = 0.213
anchor_right = 0.751
anchor_bottom = 0.82
margin_left = -0.424011
margin_top = 0.199989
margin_right = -0.0240479
margin_bottom = -3.05176e-05
texture = ExtResource( 1 )
expand = true

[node name="PhotoArea2" type="TextureRect" parent="TextureRect3"]
anchor_left = 0.1
anchor_top = 0.137
anchor_right = 0.403
anchor_bottom = 0.791
margin_left = 0.200001
margin_top = 0.131996
margin_right = 0.185989
margin_bottom = 0.0759888
texture = ExtResource( 2 )
expand = true

[node name="PhotoArea" type="TextureRect" parent="TextureRect3"]
anchor_left = 0.1
anchor_top = 0.137
anchor_right = 0.403
anchor_bottom = 0.791
margin_left = 0.200001
margin_top = 0.131996
margin_right = 0.185989
margin_bottom = 0.0759888
texture = ExtResource( 2 )
expand = true

[node name="NameArea" type="TextureRect" parent="TextureRect3"]
anchor_left = 0.059
anchor_top = 0.775
anchor_right = 0.446
anchor_bottom = 0.909
margin_left = 0.257998
margin_top = -0.100006
margin_right = 0.052002
margin_bottom = 0.123993
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="TextureRect3/NameArea"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 1 )
text = "CharacterName"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true

[node name="name" type="Label" parent="TextureRect3"]
anchor_left = 0.489
anchor_top = 0.154
anchor_right = 0.872
anchor_bottom = 0.245
margin_left = -0.0820007
margin_top = -0.0560036
margin_right = -0.136017
margin_bottom = -0.18
custom_fonts/font = SubResource( 2 )
text = "Name: "
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="age" type="Label" parent="TextureRect3"]
anchor_left = 0.489
anchor_top = 0.346
anchor_right = 0.872
anchor_bottom = 0.437
margin_left = -0.0820007
margin_top = 0.0559921
margin_right = -0.136017
margin_bottom = -0.0680084
custom_fonts/font = SubResource( 2 )
text = "Age: "
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="skill" type="Label" parent="TextureRect3"]
anchor_left = 0.489
anchor_top = 0.538
anchor_right = 0.872
anchor_bottom = 0.629
margin_left = -0.0820007
margin_top = 0.167984
margin_right = -0.136017
margin_bottom = 0.0439911
custom_fonts/font = SubResource( 2 )
text = "Skill:"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="reputation" type="Label" parent="TextureRect3"]
anchor_left = 0.489
anchor_top = 0.731
anchor_right = 0.872
anchor_bottom = 0.821
margin_left = -0.0820007
margin_top = -0.0840149
margin_right = -0.136017
margin_bottom = 0.155975
custom_fonts/font = SubResource( 2 )
text = "Reputation: "
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="TextureRect4" type="Button" parent="."]
anchor_left = 0.201
anchor_top = 0.18
anchor_right = 0.271
anchor_bottom = 0.297
margin_left = 0.175995
margin_right = -0.504028
margin_bottom = -0.200012
icon = ExtResource( 5 )
flat = true

[connection signal="pressed" from="TextureRect4" to="." method="_on_TextureRect4_pressed"]
